# MacroFlow

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
src/: BotUI.cpp  BotUI.hpp  PauseHook.cpp  ReplaySystem.cpp  ReplaySystem.hpp  main.cpp
